--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -57,26 +57,28 @@
                                       <i class="fas fa-cog"></i>
                                     </button>
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="settingsID">
-                                      <button disabled class="dropdown-item">Visible Column</button>
-                                      <button class="dropdown-item">
-                                        <i class="fas fa-eye mr-2"></i>Role
-                                      </button>
-                                      <button disabled class="dropdown-item">Hidden Column</button>
-                                      <button class="dropdown-item">
-                                        <i class="fas fa-eye-slash mr-2"></i>Property
-                                      </button>
-                                      <button class="dropdown-item">
-                                        <i class="fas fa-eye-slash mr-2"></i>License Type
-                                      </button>
-                                      <button class="dropdown-item">
-                                        <i class="fas fa-eye-slash mr-2"></i>Groups
-                                      </button>
-                                      <button class="dropdown-item">
-                                        <i class="fas fa-eye-slash mr-2"></i>Division
-                                      </button>
-                                      <button class="dropdown-item">
-                                        <i class="fas fa-eye-slash mr-2"></i>Experience
-                                      </button>
+                                      <span>Visible Columns</span>
+                                      <ul cdkDropList id="cdk-vis-items"
+                                        #visbList="cdkDropList"
+                                        [cdkDropListData]="visbCols" class="min-ht"
+                                        [cdkDropListConnectedTo]="[hidList]"
+                                        (cdkDropListDropped)="drop($event)">
+                                        <button class="dropdown-item" *ngFor="let col of visbCols;let i=index" cdkDrag>
+                                          <i class="fas fa-eye mr-2" (click)="showHideCols(col,'hide',i)"></i>{{col.n}}
+                                        </button>
+                                        <span *ngIf="visbCols.length==0">No visbible columns</span>
+                                      </ul>
+                                      <span>Hidden Columns</span>
+                                      <ul cdkDropList id="cdk-hid-items"
+                                        #hidList="cdkDropList"
+                                        [cdkDropListData]="hidCols" class="min-ht"
+                                        [cdkDropListConnectedTo]="[visbList]"
+                                        (cdkDropListDropped)="drop($event)">
+                                        <button class="dropdown-item" *ngFor="let col of hidCols;let i=index" cdkDrag>
+                                          <i class="fas fa-eye-slash mr-2" (click)="showHideCols(col,'show',i)"></i>{{col.n}}
+                                        </button>
+                                        <span *ngIf="hidCols.length==0">No hidden columns</span>
+                                      </ul>
                                     </div>
                                   </div>
                                 </div>
@@ -84,32 +86,34 @@
                             </div>
                           </h5>
                           <div class="card-text px-3">
-                            <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showDoc}">
+                            <table class="table table-hover text-dark w-100" [ngClass]="{'hide-rows': showDoc}">
                               <thead>
                                 <tr>
-                                  <th scope="col" class="curs-ptr">NAME<i class="fas fa-sort-down ml-1 align-top"></i>
-                                  </th>
-                                  <th scope="col" class="curs-ptr">Latest Activity<i
-                                      class="fas fa-sort-down ml-1 align-top"></i>
-                                  </th>
-                                  <th scope="col" class="curs-ptr">Content Updated<i
-                                      class="fas fa-sort-down ml-1 align-top"></i></th>
-                                  <th scope="col" class="curs-ptr">Role<i class="fas fa-sort-down ml-1 align-top"></i>
-                                  </th>
-                                  <th scope="col" class="curs-ptr">Date Created<i
-                                      class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <ng-container *ngFor="let col of cols" class="curs-ptr">
+                                    <th *ngIf="col.visb">
+                                      {{col.n}}<i class="fas fa-sort-down ml-1 align-top" [ngClass]="{'fa-sort-down': col.dir==1, 'fa-sort-up': col.dir==0}"></i>
+                                    </th>
+                                  </ng-container>
                                 </tr>
                               </thead>
                               <tbody>
-                                <tr (click)="toggleDoc()">
-                                  <td>
+                                <tr *ngFor="let d of data" (click)="toggleDoc()">
+                                  <ng-container *ngFor="let col of cols">
+                                    <td *ngIf="col.visb">
+                                        <span *ngIf="col.key=='name' else otherRow">
+                                          {{d.name}}<small>{{d.email}}</small>
+                                        </span>
+                                        <ng-template #otherRow>{{d[col.key]}}</ng-template>
+                                    </td>
+                                  </ng-container>
+                                  <!-- <td>
                                     User Full Name<br />
                                     <small>email@email.com</small>
                                   </td>
                                   <td class="text-hi-dark-grey">19 Aug 2020</td>
                                   <td>19 Aug 2020</td>
                                   <td class="text-hi-dark-grey">User</td>
-                                  <td>19 Aug 2020</td>
+                                  <td>19 Aug 2020</td> -->
                                 </tr>
                               </tbody>
                             </table>
