hover color, cog styling, sort styling

--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -161,7 +161,7 @@
                         <div class="col-6 text-center">
                           <img src="assets/images/discription.png">
                         </div>
-                        <div class="col-6 align-self-center text-hi-dark work-div primary-bg-hover rounded p-2">
+                        <div class="col-6 align-self-center text-hi-dark work-div dark-bg-hover rounded p-2">
                           <h6 class="font-weight-bold">
                             DESCRIPTION
                             <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
@@ -193,7 +193,7 @@
                         <mat-tab-group>
                           <mat-tab label="Properties">
                             <div class="properties">
-                              <div class="tags mt-3 work-div primary-bg-hover rounded p-2">
+                              <div class="tags mt-3 work-div dark-bg-hover rounded p-2">
                                 <div class="font-weight-bold mb-1">
                                   Tags
                                   <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
@@ -217,7 +217,7 @@
                                 </div>
                               </div>
                               <div class="row mt-3 mx-0">
-                                <div class="author col-6 work-div primary-bg-hover rounded p-2">
+                                <div class="author col-6 work-div dark-bg-hover rounded p-2">
                                   <div class="font-weight-bold mb-1">
                                     Author
                                     <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
@@ -242,7 +242,7 @@
                                     </form>
                                   </div>
                                 </div>
-                                <div class="availibility col-6 work-div primary-bg-hover rounded p-2">
+                                <div class="availibility col-6 work-div dark-bg-hover rounded p-2">
                                   <div class="font-weight-bold mb-1">
                                     Availibility
                                     <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
@@ -272,7 +272,7 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="language work-div primary-bg-hover rounded p-2">
+                              <div class="language work-div dark-bg-hover rounded p-2">
                                 <div class="font-weight-bold mb-1">
                                   Language
                                   <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
@@ -295,7 +295,7 @@
                                   </form>
                                 </div>
                               </div>
-                              <div class="country work-div primary-bg-hover rounded p-2">
+                              <div class="country work-div dark-bg-hover rounded p-2">
                                 <div class="font-weight-bold mb-1">
                                   Country
                                   <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
@@ -324,7 +324,7 @@
                             <div class="info">
                               <div class="row mx-0">
                                 <div class="col-6">
-                                  <div class="history mt-3 work-div primary-bg-hover rounded p-2">
+                                  <div class="history mt-3 work-div dark-bg-hover rounded p-2">
                                     <div class="font-weight-bold mb-1">
                                       History
                                     </div>
@@ -336,7 +336,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="crm mt-3 work-div primary-bg-hover rounded p-2">
+                                  <div class="crm mt-3 work-div dark-bg-hover rounded p-2">
                                     <div class="font-weight-bold mb-1">
                                       CRM Recommendations
                                     </div>
@@ -348,7 +348,7 @@
                                   </div>
                                 </div>
                                 <div class="col-6">
-                                  <div class="experiences mt-3 work-div primary-bg-hover rounded p-2">
+                                  <div class="experiences mt-3 work-div dark-bg-hover rounded p-2">
                                     <div class="font-weight-bold mb-1">
                                       Used in Experiences
                                     </div>
@@ -358,7 +358,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="extId mt-3 work-div primary-bg-hover rounded p-2">
+                                  <div class="extId mt-3 work-div dark-bg-hover rounded p-2">
                                     <div class="font-weight-bold mb-1">
                                       External ID
                                       <a class="float-right text-hi-dark-grey" (click)="openEdit($event)">
@@ -383,7 +383,7 @@
                                       </form>
                                     </div>
                                   </div>
-                                  <div class="appLink mt-3 work-div primary-bg-hover rounded p-2">
+                                  <div class="appLink mt-3 work-div dark-bg-hover rounded p-2">
                                     <div class="font-weight-bold mb-1">
                                       App Link
                                     </div>
@@ -632,9 +632,9 @@
                       <div class="input-group" [style.display]="showAddCatIp">
                         <input type="text" class="form-control form-control-sm" placeholder="Add Category">
                         <div class="input-group-append">
-                          <span class="input-group-text bg-white primary-bg-hover" (click)="closeAddCatIp()"><i
+                          <span class="input-group-text bg-white dark-bg-hover" (click)="closeAddCatIp()"><i
                               class="fas fa-times"></i></span>
-                          <span class="input-group-text bg-white primary-bg-hover text-primary"><i
+                          <span class="input-group-text bg-white dark-bg-hover text-primary"><i
                               class="fas fa-check-circle"></i></span>
                         </div>
                       </div>
